# ci_test

./: CMakeLists.txt  main.cpp  tests.cpp  utility.cpp  utility.h
.github/workflows/: c-cpp.yml
gtest/: tests.cpp
